--- a/css/main.css
+++ b/css/main.css
@@ -86,3 +86,82 @@
 
 
 /* recommendations component */
+
+
+
+
+/* Home Page - Recommendations Section:
+
+The recommendations title must have the color of #335576
+There will be 3 Cards, one for each destination (Iceland, Greece, Hawaii)
+The destination name must be in the bottom right corner of the card
+The border radius of the cards must be 5px
+The border of the cards must be 1px solid black with an opacity of 20%
+The box shadow of the cards must be:
+    Horizontal Offset: 0px
+    Vertical Offset: 4px
+    Blur: 4px
+    Color: Black, with an opacity of 20% */
+
+
+.recommendation__heading {
+    font-size: 1.5rem;
+    color: #335576;
+    margin-left: 5rem;
+    margin-top: 2.125rem;
+}
+
+.card__wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.card__block {
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+}
+
+.card {
+    border-radius: 5px;
+    border: 1px sold rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    position: relative; /*position relative so that text can be placed in bottom right corner */
+    /* display: inline-flex; */
+}
+
+.card__anchor {
+    text-decoration: none;
+    /* position: absolute; */
+}
+
+.card__img {
+
+    /* 0.75 of width: 400px and height of 600px */
+    /* width: 300px;
+    height: 450px; */
+
+    /* width: 400px;
+    height: 600px; */
+    /* width: 200px;
+    height: 300px; */
+    /* divide orginal dimensions of pics by 8 */
+    width: 250px;
+    height: 375px;
+    /* width: 500px;
+    height: 750px; */
+}
+
+.card__text {
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    bottom: 61px;
+    right: 20px;
+    color: #FFF;
+    font-size: 1.3rem;
+    font-weight: bolder;
+
+    
+    /* display: inline-block; */
+}
+
