--- a/css/global.css
+++ b/css/global.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: Verdana, Tahoma, sans-serif;
-    outline: 5px solid purple;
+    /* outline: 5px solid purple; */
     width: 1280px;
 }
 /* The base font for the site must be Verdana. */
@@ -36,6 +36,7 @@ body {
     width: 1280px;
     display: flex;
     align-items: baseline;
+    z-index: 1; /* so that nav is not underneath the cards */
     /* width: 90%; */
     /*make sure to check on 1280px screen in inspector */
 justify-content: space-between;
@@ -108,3 +109,106 @@ justify-content: space-between; */
 
 
 /* footer component */
+
+
+
+/* Each page must have an identical footer with the following style:
+
+    The background color must be #FEFAF5
+    The footer titles and text must be the color #335576
+    The footer subtitles must be the color #DB7A4E */
+
+.footer {
+    background-color: #FEFAF5; 
+    display: flex;
+    justify-content: space-around;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    /* align-content: baseline; */
+}
+
+
+
+.footer__title {
+    color: #335576;
+}
+
+.footer__email-container {
+    position: relative;
+    top: 12px;
+}
+
+.footer__email {
+    font-size: 14px;
+    color: #335576;
+    /* font-weight: 500; */
+}
+
+.footer__subtitle {
+    color: #DB7A4E;
+    text-transform: uppercase;
+    font-size: 10px;
+}
+
+
+
+/* footer hours */
+
+.footer__hours-container {
+    position: relative;
+    left: 25px;
+}
+
+.footer__hours-grouping {
+    position: relative;
+    left: 15px;
+}
+
+.footer__hours {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    right: 40px;
+    list-style-type: none;
+}
+
+.footer__hours--text {
+    font-size: 14px;
+    margin-right: 15px;
+    color: #335576;
+}
+
+
+
+.footer__contact-container {
+    position: relative;
+    left: 125px;
+}
+
+.footer__social-container {
+    position: relative;
+    right: 102px;
+}
+
+.footer__icon-instagram {
+    width: 23.8px;
+    height: 23.8px;
+    margin-right: 15px;
+}
+
+.footer__icon-fb {
+    width: 12.6px;
+    height: 23.8px;
+    margin-right: 15px;
+}
+
+.footer__icon-twitter {
+    width:  26.6px;
+    height: 23.8px;
+    margin-right: 15px;
+}
+
+.footer__icons-container {
+    position: relative;
+    top: 30px;
+}
