--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 20px;
     padding-bottom: 30px;
 }
 
