--- a/css/global.css
+++ b/css/global.css
@@ -1,9 +1,6 @@
 .container {
     font-family: Verdana, Tahoma, sans-serif;
-    width: 1280px;
-    /* to center the website */
-    /* margin-left: auto;
-    margin-right: auto; */
+    width: 80rem;
     margin: 0;
 }
 
@@ -15,10 +12,10 @@
     top: 0;
     margin-left: 5rem;
     margin-right: 5rem;
-    width: 1280px;
+    width: 80rem;
     display: flex;
     align-items: baseline;
- /* so that nav is not underneath the cards */
+    /* so that nav is not underneath the cards */
     z-index: 1;
     justify-content: space-between;
 }
@@ -37,24 +34,25 @@
 .menu__item {
     display: inline;
     box-sizing: border-box;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
 }
 
 .menu__last-item {
     padding-right: 0;
 }
 
-.menu__item-link{
+.menu__item-link {
     text-decoration: none;
 }
 
 /* diving deeper-- hover animations to links */
 
-.menu__item--active, .menu__item-link:hover {
+.menu__item--active,
+.menu__item-link:hover {
     /* code from https://stackoverflow.com/questions/1734618/how-to-increase-the-gap-between-text-and-underlining-in-css */
-    border-bottom: 4px solid #DB7A4E;
-    padding-bottom: 10px;
+    border-bottom: 0.25rem solid #DB7A4E;
+    padding-bottom: 0.625rem;
 }
 
 /* card components */
@@ -69,15 +67,14 @@
 }
 
 .card {
-    border-radius: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    border-radius: 0.3125rem;
+    border: 0.0625rem solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.2);
     /*position relative so that text can be placed in bottom right corner */
     position: relative;
     /* divide orginal dimensions of pics by 8 */
-    width: 250px;
-    height: 375px;
-    
+    width: 15.625rem;
+    height: 23.4375rem;
 }
 
 /* footer component */
@@ -86,33 +83,33 @@
     background-color: #FEFAF5;
     display: flex;
     justify-content: space-around;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
     margin-bottom: 0;
 }
 
 .footer__contact-container {
     position: relative;
-    left: 125px;
+    left: 7.8125rem;
 }
 
-.footer__heading{
+.footer__heading {
     color: #335576;
 }
 
 .footer__email-container {
     position: relative;
-    top: 12px;
+    top: 0.75rem;
 }
 
 .footer__subtitle {
     color: #DB7A4E;
     text-transform: uppercase;
-    font-size: 10px;
+    font-size: 0.625rem;
 }
 
 .footer__email {
-    font-size: 14px;
+    font-size: 0.875rem;
     color: #335576;
 }
 
@@ -120,58 +117,57 @@
 
 .footer__hours-container {
     position: relative;
-    left: 25px;
+    left: 1.5625rem;
 }
 
 .footer__hours-grouping {
     position: relative;
-    left: 15px;
+    left: 0.9375rem;
 }
 
 .footer__hours {
     display: flex;
     justify-content: space-between;
     position: relative;
-    right: 40px;
+    right: 2.5rem;
     list-style-type: none;
 }
 
 .footer__hours--text {
-    font-size: 14px;
-    margin-right: 15px;
+    font-size: 0.875rem;
+    margin-right: 0.9375rem;
     color: #335576;
 }
 
 .footer__contact-container {
     position: relative;
-    left: 125px;
+    left: 7.8125rem;
 }
 
 .footer__social-container {
     position: relative;
-    right: 102px;
+    right: 6.375rem;
 }
 
 .footer__icons-container {
     position: relative;
-    top: 30px;
+    top: 1.875rem;
 }
 
 .footer__icon-instagram {
-    width: 23.8px;
-    height: 23.8px;
-    margin-right: 15px;
+    width: 1.4875rem;
+    height: 1.4875rem;
+    margin-right: 0.9375rem;
 }
 
 .footer__icon-fb {
-    width: 12.6px;
-    height: 23.8px;
-    margin-right: 15px;
+    width: 0.7875rem;
+    height: 1.4875rem;
+    margin-right: 0.9375rem;
 }
 
 .footer__icon-twitter {
-    width: 26.6px;
-    height: 23.8px;
-    margin-right: 15px;
+    width: 1.6625rem;
+    height: 1.4875rem;
+    margin-right: 0.9375rem;
 }
-
